Prevent x scroll on mobiles

--- a/public/styles.css
+++ b/public/styles.css
@@ -784,6 +784,7 @@ u::after {
     display: none;
   }
 
+  html,
   body {
     overflow-x: hidden;
   }
